--- a/examples/templates/index.html
+++ b/examples/templates/index.html
@@ -180,7 +180,9 @@ in plain English :<br />
 
 <p>4. 2019-10-20 - Scripting integration through v8 Engine</p>
 
-<p>5. 2019-11-01 - Quarks Console is up and running (<a href="http://api.quarkshub.com/console">http://api.quarkshub.com/console</a>)</p>
+<p>5. 2019-11-01 - Quarks Console is up and running for testing (<a href="http://api.quarkshub.com/console">http://api.quarkshub.com/console</a>)</p>
+<p>However this should not be used anymore</p>
+<p> 2021-07-17 The console will be replaced by the Editor at same url
 
 <p>Slowly but surely we are getting there :)</p>
 
